@@ -734,19 +734,19 @@
   "Show all children from *current-root*."
   (let ((geometry-change nil)
 	(previous nil))
-    (labels ((rec (child parent selected-p selected-parent-p)
+    (labels ((rec (child parent selected-p)
 	       (when (adapt-child-to-parent child parent)
 		 (setf geometry-change t))
 	       (select-child child (cond ((child-equal-p child *current-child*) t)
-					 ((and selected-p selected-parent-p) :maybe)
+					 (selected-p :maybe)
 					 (t nil)))
 	       (when (frame-p child)
 		 (let ((selected-child (frame-selected-child child)))
 		   (dolist (sub-child (frame-child child))
-		     (rec sub-child child (child-equal-p sub-child selected-child) (and selected-p selected-parent-p)))))
+		     (rec sub-child child (and selected-p (child-equal-p sub-child selected-child))))))
 	       (show-child child parent previous)
 	       (setf previous child)))
-      (rec *current-root* nil t t)
+      (rec *current-root* nil t)
       (set-focus-to-current-child)
       geometry-change)))
 
